Replace Guava classes